<resources>
    <string name="app_name">SwagHunt</string>

    <string name="Create">Create</string>
    <string name="Play">Play</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>

    <string name="Enter_type_of_task">Enter the type of Task:</string>
    <string name="Enter_Clue">Enter Clue:</string>
    <string name="Enter_the_name_of_the_Object">Enter the name of the Object:</string>
    <string name="Enter_the_Answer">Enter the Answer:</string>

    <string name="Select_Photo_From_Library">Select Photo From Library</string>
    <string name="Open_Camera_To_Scan_QR_Code">Open Camera To Scan QR Code</string>

    <string name="Question_Number_of_steps">How many steps in your hunt?</string>
    <string name="Permission_Denied">Permission Denied</string>

</resources>
